--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-### ExtJs ###
+### ExtJs 6 ###
 
 # Architect
 .architect
 
-# Dynamic Builds
+# Dynamically Genarated Files
 bootstrap.css
 bootstrap.js
 bootstrap.json
 modern.json
 classic.json
 native.json
+
+# Build Folder
 /build/
 
 # Logs
